feat: add task detail page
